# rucomfyui

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  release-plz.toml  release.toml  shell.nix
crates/rucomfyui/: CHANGELOG.md  Cargo.toml  README.md
crates/rucomfyui/examples/: existing_workflow.json  existing_workflow.rs  live_progress.rs  typed_workflow.rs  typed_workflow_with_upload.rs  workflow_with_typed_and_dynamic.rs
crates/rucomfyui/generate_nodes/: CHANGELOG.md  Cargo.toml  README.md  object_info.json
crates/rucomfyui/generate_nodes/src/: lib.rs  main.rs  util.rs
crates/rucomfyui/generate_nodes/tests/: external_generation.rs
crates/rucomfyui/src/: constructor.rs  error.rs  execute.rs  history.rs  lib.rs  models.rs  object_info.rs  queue.rs  system.rs  system_stats.rs  upload.rs  workflow.rs
crates/rucomfyui/src/execute/: websocket.rs
crates/rucomfyui/src/nodes/: all.rs  mod.rs  types.rs
crates/rucomfyui/src/nodes/advanced/: mod.rs
crates/rucomfyui/src/nodes/advanced/conditioning/: mod.rs
crates/rucomfyui/src/nodes/advanced/debug/: mod.rs
crates/rucomfyui/src/nodes/advanced/guidance/: mod.rs
crates/rucomfyui/src/nodes/advanced/hooks/: mod.rs
crates/rucomfyui/src/nodes/advanced/loaders/: mod.rs
crates/rucomfyui/src/nodes/advanced/model/: mod.rs
crates/rucomfyui/src/nodes/advanced/model_merging/: mod.rs
crates/rucomfyui/src/nodes/advanced/model_patches/: mod.rs
crates/rucomfyui/src/nodes/advanced/multigpu/: mod.rs
crates/rucomfyui/src/nodes/api_node/: mod.rs
crates/rucomfyui/src/nodes/api_node/audio/: mod.rs
crates/rucomfyui/src/nodes/api_node/image/: mod.rs
crates/rucomfyui/src/nodes/api_node/n_3_d/: mod.rs
crates/rucomfyui/src/nodes/api_node/text/: mod.rs
crates/rucomfyui/src/nodes/api_node/video/: mod.rs
crates/rucomfyui/src/nodes/audio/: mod.rs
crates/rucomfyui/src/nodes/camera/: mod.rs
crates/rucomfyui/src/nodes/conditioning/: mod.rs
crates/rucomfyui/src/nodes/conditioning/controlnet/: mod.rs
crates/rucomfyui/src/nodes/conditioning/gligen/: mod.rs
crates/rucomfyui/src/nodes/conditioning/inpaint/: mod.rs
crates/rucomfyui/src/nodes/conditioning/instructpix_2_pix/: mod.rs
crates/rucomfyui/src/nodes/conditioning/lotus/: mod.rs
crates/rucomfyui/src/nodes/conditioning/n_3_d_models/: mod.rs
crates/rucomfyui/src/nodes/conditioning/stable_cascade/: mod.rs
crates/rucomfyui/src/nodes/conditioning/style_model/: mod.rs
crates/rucomfyui/src/nodes/conditioning/upscale_diffusion/: mod.rs
crates/rucomfyui/src/nodes/conditioning/video_models/: mod.rs
crates/rucomfyui/src/nodes/context/: mod.rs
crates/rucomfyui/src/nodes/dataset/: mod.rs
crates/rucomfyui/src/nodes/dataset/image/: mod.rs
crates/rucomfyui/src/nodes/dataset/text/: mod.rs
crates/rucomfyui/src/nodes/experimental/: mod.rs
crates/rucomfyui/src/nodes/experimental/attention_experiments/: mod.rs
crates/rucomfyui/src/nodes/experimental/conditioning/: mod.rs
crates/rucomfyui/src/nodes/experimental/custom_sampling/: mod.rs
crates/rucomfyui/src/nodes/experimental/photomaker/: mod.rs
crates/rucomfyui/src/nodes/experimental/stable_cascade/: mod.rs
crates/rucomfyui/src/nodes/image/: mod.rs
crates/rucomfyui/src/nodes/image/adjustments/: mod.rs
crates/rucomfyui/src/nodes/image/animation/: mod.rs
crates/rucomfyui/src/nodes/image/background_removal/: mod.rs
crates/rucomfyui/src/nodes/image/batch/: mod.rs
crates/rucomfyui/src/nodes/image/color/: mod.rs
crates/rucomfyui/src/nodes/image/compositing/: mod.rs
crates/rucomfyui/src/nodes/image/detection/: mod.rs
crates/rucomfyui/src/nodes/image/filters/: mod.rs
crates/rucomfyui/src/nodes/image/geometry_estimation/: mod.rs
crates/rucomfyui/src/nodes/image/mask/: mod.rs
crates/rucomfyui/src/nodes/image/postprocessing/: mod.rs
crates/rucomfyui/src/nodes/image/preprocessors/: mod.rs
crates/rucomfyui/src/nodes/image/save/: mod.rs
crates/rucomfyui/src/nodes/image/shader/: mod.rs
crates/rucomfyui/src/nodes/image/transform/: mod.rs
crates/rucomfyui/src/nodes/image/upscaling/: mod.rs
crates/rucomfyui/src/nodes/image/video/: mod.rs
crates/rucomfyui/src/nodes/latent/: mod.rs
crates/rucomfyui/src/nodes/latent/advanced/: mod.rs
crates/rucomfyui/src/nodes/latent/audio/: mod.rs
crates/rucomfyui/src/nodes/latent/batch/: mod.rs
crates/rucomfyui/src/nodes/latent/chroma_radiance/: mod.rs
crates/rucomfyui/src/nodes/latent/inpaint/: mod.rs
crates/rucomfyui/src/nodes/latent/n_3_d/: mod.rs
crates/rucomfyui/src/nodes/latent/sd_3/: mod.rs
crates/rucomfyui/src/nodes/latent/stable_cascade/: mod.rs
crates/rucomfyui/src/nodes/latent/transform/: mod.rs
crates/rucomfyui/src/nodes/loaders/: mod.rs
crates/rucomfyui/src/nodes/mask/: mod.rs
crates/rucomfyui/src/nodes/model/: mod.rs
crates/rucomfyui/src/nodes/model_patches/: mod.rs
crates/rucomfyui/src/nodes/n_3_d/: mod.rs
crates/rucomfyui/src/nodes/partner/: mod.rs
crates/rucomfyui/src/nodes/sampling/: mod.rs
crates/rucomfyui/src/nodes/sd/: mod.rs
crates/rucomfyui/src/nodes/text/: mod.rs
crates/rucomfyui/src/nodes/training/: mod.rs
crates/rucomfyui/src/nodes/utilities/: mod.rs
crates/rucomfyui/src/nodes/utils/: mod.rs
crates/rucomfyui/src/nodes/video/: mod.rs
crates/rucomfyui_mlua/: CHANGELOG.md  Cargo.toml  README.md
crates/rucomfyui_mlua/examples/: run_script.rs
crates/rucomfyui_mlua/src/: client.rs  config.rs  conversion.rs  error.rs  graph.rs  lib.rs  node_output.rs
crates/rucomfyui_node_graph/: CHANGELOG.md  Cargo.toml  README.md
crates/rucomfyui_node_graph/src/: internal.rs  lib.rs
crates/rucomfyui_workflow_converter/: CHANGELOG.md  Cargo.toml  README.md
crates/rucomfyui_workflow_converter/src/: lib.rs  lua_generator.rs  rust_generator.rs  workflow_analyzer.rs
crates/rucomfyui_workflow_converter/testdata/: example_workflow.json  simple_workflow.json
crates/rucomfyui_workflow_converter/tests/: lua_generation.rs  rust_compilation.rs
generate_nodes/: Cargo.toml  README.md  (+1 more)
rucomfyui-node-graph/: Cargo.toml
rucomfyui-node-graph/src/: library.rs  main.rs  workflow.rs
(+248 files in other folders)
