[workspace]
members = ["crates/rucomfyui/generate_nodes", "crates/*", "bin/*"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
futures-timer = { version = "3.0", features = ["wasm-bindgen"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["time"] }
web-time = "1.1"
