[workspace]
members = ["crates/rucomfyui/generate_nodes", "crates/*", "bin/*"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
convert_case = "0.6.0"
futures-timer = { version = "3.0", features = ["wasm-bindgen"] }
indexmap = { version = "2", features = ["serde"] }
mlua = { version = "0.11", features = ["vendored", "async", "send", "serialize"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["time"] }
web-time = "1.1"
