[workspace]
members = ["crates/rucomfyui/generate_nodes", "crates/*", "bin/*"]
resolver = "2"

[workspace.package]
version = "1.0.0-rc4"
edition = "2024"
rust-version = "1.92"
authors = ["Philpax <me@philpax.me>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/philpax/rucomfyui"

[workspace.dependencies]
anyhow = "1.0"
async-stream = "0.3"
convert_case = "0.11"
ewebsock = "0.8"
futures-timer = { version = "3.0", features = ["wasm-bindgen"] }
indexmap = { version = "2", features = ["serde"] }
mlua = { version = "0.11", features = ["vendored", "async", "send", "serialize"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "multipart"] }
rucomfyui = { path = "crates/rucomfyui", version = "1.0.0-rc4", default-features = false, features = ["typed_nodes"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
thiserror = "2.0"
tokio = { version = "1.40.0", features = ["time"] }
web-time = "1.1"
