[package]
name = "rucomfyui-node-graph"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.28", features = ["persistence"] }
egui_node_graph2 = { version = "0.6.0", features = ["persistence"] }
anyhow = "1.0"
serde = "1.0"

rucomfyui = { path = "../" }
tokio = { workspace = true, features = ["full"] }
