[package]
name = "rucomfyui-node-graph"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.28", features = ["persistence"] }
egui_extras = { version = "0.28", features = ["all_loaders"] }
egui_node_graph2 = { version = "0.6.0", features = ["persistence"] }
anyhow = "1.0"
serde = "1.0"
tokio = { workspace = true, features = ["full"] }
egui-file-dialog = "0.6.1"

# We don't need the typed nodes, so disable them
rucomfyui = { path = "../", default-features = false }
