[package]
name = "rucomfyui"
version = "0.1.0"
edition = "2021"
description = "A Rust client for ComfyUI with an emphasis on type safety and ergonomics."
authors = ["Philpax <me@philpax.me>"]
license = "MIT"

[dependencies]
futures = "0.3"

futures-timer = { workspace = true }
indexmap = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
thiserror = { workspace = true }
web-time = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[features]
default = ["typed_nodes", "default-tls"]
typed_nodes = []
default-tls = ["reqwest/default-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]
