[package]
name = "rucomfyui"
version = "0.1.0"
edition = "2024"
description = "A Rust client for ComfyUI with an emphasis on type safety and ergonomics."
authors = ["Philpax <me@philpax.me>"]
license = "MIT"

[dependencies]
futures = "0.3"

async-stream = { workspace = true }
ewebsock = { workspace = true, optional = true }
futures-timer = { workspace = true }
indexmap = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
thiserror = { workspace = true }
web-time = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[features]
default = ["typed_nodes"]
typed_nodes = []
# Use a WebSocket connection for `Client::execute` to receive live progress
# events (and previews), falling back to HTTP polling if the socket is
# unavailable. Opt-in, as the ComfyUI WebSocket API can be brittle.
websocket = ["dep:ewebsock"]
