[package]
name = "rucomfyui"
description = "A Rust client for ComfyUI with an emphasis on type safety and ergonomics."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["comfyui", "stable-diffusion", "client", "api"]
categories = ["api-bindings", "multimedia::images"]

[dependencies]
futures = { workspace = true }

async-stream = { workspace = true }
ewebsock = { workspace = true, optional = true }
futures-timer = { workspace = true }
indexmap = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
thiserror = { workspace = true }
web-time = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[features]
default = ["typed_nodes", "websocket"]
typed_nodes = []
# Use a WebSocket connection for `Client::execute` to receive live progress
# events (and previews), falling back to HTTP polling if the socket is
# unavailable.
websocket = ["dep:ewebsock"]

[package.metadata.release]
pre-release-replacements = [
    { file = "README.md", search = 'rucomfyui = "[^"]*"', replace = 'rucomfyui = "{{version}}"', exactly = 1, prerelease = true },
]
