[package]
name = "rucomfyui_mlua"
description = "Lua bindings for rucomfyui - a fluent ComfyUI workflow builder"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["comfyui", "lua", "mlua", "stable-diffusion"]
categories = ["api-bindings", "multimedia::images"]

[dependencies]
rucomfyui = { path = "../rucomfyui", version = "1.0.0-rc1", default-features = false }
mlua = { workspace = true }
convert_case = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
