[package]
name = "rucomfyui_node_graph"
description = "A recreation of the ComfyUI node graph in Rust using `egui` and `rucomfyui`."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["comfyui", "egui", "node-graph", "stable-diffusion"]
categories = ["gui", "visualization"]

[dependencies]
egui = "0.35"
egui-snarl = "0.11"

# We don't need the typed nodes, so we are opting out of them
rucomfyui = { path = "../rucomfyui", version = "1.1.1", default-features = false }

serde = { workspace = true, optional = true }

[features]
default = []
serde = ["dep:serde", "egui-snarl/serde"]

[package.metadata.release]
pre-release-replacements = [
    { file = "README.md", search = 'rucomfyui = "[^"]*"', replace = 'rucomfyui = "{{version}}"', exactly = 1, prerelease = true },
    { file = "README.md", search = 'rucomfyui_node_graph = "[^"]*"', replace = 'rucomfyui_node_graph = "{{version}}"', exactly = 1, prerelease = true },
]
