[package]
name = "rucomfyui_workflow_converter"
version = "0.1.0"
edition = "2021"
description = "Convert ComfyUI API workflows to typed Rust or Lua code"

[dependencies]
anyhow = { workspace = true }
convert_case = { workspace = true }
prettyplease = "0.2"
proc-macro2 = "1"
quote = "1"
rucomfyui = { path = "../rucomfyui" }
serde = { workspace = true }
serde_json = { workspace = true }
syn = "2"
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
serde_json = { workspace = true }
