[package]
name = "rucomfyui_workflow_converter"
version = "0.1.0"
edition = "2021"
description = "Convert ComfyUI API workflows to typed Rust or Lua code"

[features]
default = ["lua", "rust"]
lua = ["dep:full_moon"]
rust = ["dep:prettyplease", "dep:proc-macro2", "dep:quote", "dep:syn"]

[dependencies]
convert_case = { workspace = true }
full_moon = { version = "2", optional = true }
prettyplease = { version = "0.2", optional = true }
proc-macro2 = { version = "1", optional = true }
quote = { version = "1", optional = true }
rucomfyui = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
syn = { version = "2", optional = true }
thiserror = { workspace = true }

[dev-dependencies]
full_moon = "2"
prettyplease = "0.2"
proc-macro2 = "1"
quote = "1"
syn = "2"
tempfile = "3"
