[package]
name = "rucomfyui_workflow_converter"
description = "Convert ComfyUI API workflows to typed Rust or Lua code"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["comfyui", "codegen", "workflow", "stable-diffusion"]
categories = ["development-tools"]

[features]
default = ["lua", "rust"]
lua = ["dep:full_moon"]
rust = ["dep:prettyplease", "dep:proc-macro2", "dep:quote", "dep:syn"]

[dependencies]
convert_case = { workspace = true }
full_moon = { version = "2", optional = true }
prettyplease = { version = "0.2", optional = true }
proc-macro2 = { version = "1", optional = true }
quote = { version = "1", optional = true }
rucomfyui = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
syn = { version = "2", optional = true }
thiserror = { workspace = true }

[dev-dependencies]
full_moon = "2"
prettyplease = "0.2"
proc-macro2 = "1"
quote = "1"
syn = "2"
tempfile = "3"

[package.metadata.release]
pre-release-replacements = [
    { file = "README.md", search = 'rucomfyui = "[^"]*"', replace = 'rucomfyui = "{{version}}"', exactly = 1, prerelease = true },
    { file = "README.md", search = 'rucomfyui_workflow_converter = "[^"]*"', replace = 'rucomfyui_workflow_converter = "{{version}}"', exactly = 1, prerelease = true },
]
