[package]
name = "rucomfyui_generate_nodes"
description = "A library for generating typed Rust node definitions from ComfyUI ObjectInfo."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[package.metadata.release]
release = false

[dependencies]
anyhow = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }

# Yes, we're using the client we're generating files for. Wacky, right?
rucomfyui = { path = "../", default-features = false }

quote = "1.0.37"
prettyplease = "0.2.22"
syn = "2.0.77"
proc-macro2 = "1.0.86"
convert_case = { workspace = true }
