[package]
name = "rucomfyui_generate_nodes"
description = "A library for generating typed Rust node definitions from ComfyUI ObjectInfo."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["comfyui", "codegen", "stable-diffusion", "node"]
categories = ["development-tools::build-utils", "api-bindings"]

[dependencies]
anyhow = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }

# Yes, we're using the client we're generating files for. Wacky, right?
rucomfyui = { path = "../", version = "1.0.0", default-features = false }

quote = "1.0.37"
prettyplease = "0.2.22"
syn = "2.0.77"
proc-macro2 = "1.0.86"
convert_case = { workspace = true }

[dev-dependencies]
tempfile = "3"

[package.metadata.release]
pre-release-replacements = [
    { file = "README.md", search = 'rucomfyui_generate_nodes = "[^"]*"', replace = 'rucomfyui_generate_nodes = "{{version}}"', exactly = 1, prerelease = true },
    { file = "README.md", search = 'rucomfyui = "[^"]*"', replace = 'rucomfyui = "{{version}}"', exactly = 1, prerelease = true },
]
